# aiui

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  server.py
.github/: engineering-standards.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-windows.yml
companion/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
companion/src/: App.svelte  app.css  app.d.ts  main.ts
companion/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
companion/src-tauri/capabilities/: default.json
companion/src-tauri/dmg/: config.json
companion/src-tauri/icons/: icon.icns
companion/src-tauri/src/: ack.rs  config.rs  dialog.rs  fsutil.rs  housekeeping.rs  http.rs  imageresolve.rs  lib.rs  lifetime.rs  logging.rs  main.rs  mcp.rs  setup.rs  skill.rs  tunnel.rs
companion/src/i18n/: de.json  en.json  index.ts
companion/src/lib/: DialogShell.svelte  Settings.svelte  updater.ts
companion/src/lib/widgets/: Ask.svelte  Confirm.svelte  Form.svelte  MermaidView.svelte  TreeNode.svelte  WireframeView.svelte
docs/: skill.md  strategy.md  widgets.md
docs/architecture/: self-healing.md
docs/reviews/: v0.4.10-codex-review.md
python/: README.md  pyproject.toml
python/src/aiui_mcp/: __init__.py  server.py  skill.md
python/tests/: test_health_error_handling.py  test_resolve_local_paths.py
script/: setup
scripts/: diagnose-session-startup.sh  install-mac.sh  release.sh
