[package]
name = "aiui"
version = "0.4.1"
description = "aiui companion — renders dialogs for remote Claude Code sessions"
authors = ["byte5"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aiui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "aiui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2.10.3", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
rand = "0.8"
hex = "0.4"
futures = "0.3"
regex = "1"
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
